--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>🚀 Deployed via GitHub Actions!</h1>
-  <h2>Hello World</h2>
+  <p> GitHub Actions is awesome</p>
 </body>
 </html>
